--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,6 +31,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
+            "allowedCommonJsDependencies": [
+              "qrcode"
+           ],
             "scripts": []
           },
           "configurations": {
